--- a/LWafula_Thesis_Report4Upload.Rnw
+++ b/LWafula_Thesis_Report4Upload.Rnw
@@ -7,6 +7,7 @@
 	\usepackage{pifont}
 	\usepackage{lscape}
 	\usepackage{amsfonts}
+	\usepackage{hyperref}
 	\usepackage{siunitx}
 	\usepackage{amsmath}
 	\usepackage{amsthm}
@@ -1572,11 +1573,8 @@ Ratio\_Nuc2Cyto\_GFP\_TotalInt & 1.87 & 1.95 & 1.58 & 1.7 \\
 \label{agg_allbox_poor}
 \end{figure}
 
-\clearpage
-\subsection{CODES}
-\begin{verbatim}
-
-\end{verbatim}
+\subsection*{CODES}
+Codes used in this analysis can be accessed via \url{https://github.com/lwafula/MSc.-Thesis}
 
 \end{document}
 
